--- a/style.css
+++ b/style.css
@@ -145,3 +145,56 @@ padding: 12px 20px 12px 20px;
 }
 
 /* target section */
+
+.target-section{
+    width: 1140px;
+    height: 463px;
+    margin: 0 auto 41px auto;
+}
+.target-descreption{
+    width: 852px;
+    height: 115px;
+    text-align: center;
+    margin-bottom: 48px;
+    margin: 0 auto;
+}
+.target-box{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+.target{
+    width: 284px;
+    height: 220px;
+    padding: 40px;
+    
+}
+
+.target-box .one {
+    border-radius: 16px;
+background: rgba(255, 76, 30, 0.05);
+
+}
+.target-box .two{
+    border-radius: 16px;
+background: rgba(0, 76, 232, 0.05);
+}
+.target-box .three{
+    border-radius: 16px;
+background: rgba(255, 223, 0, 0.05);
+}
+.target h3{
+    margin-bottom: 8px;
+}
+.target p{
+    margin-bottom: 24px;
+}
+.target img{
+    margin-bottom:24px ;
+}
+.target-box a {
+    color: black;
+    font-size: 16px;
+}
