--- a/style.css
+++ b/style.css
@@ -229,8 +229,27 @@ height: 57px;
     width: 120px;
     height: 58px;
     border-radius: 8px;
-
 background: rgb(255, 255, 255);
 padding: 17px 20px 17px 20px;
 margin-top: 70px;
+}
+
+/* footer section */
+.footer{
+    display: flex;
+    align-items: center;
+    padding: 32px 200px 32px 225px;
+    background: rgba(13, 19, 33, 0.03);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 80px;
+}
+.footer-icon img{
+    margin: 0 10px;
+}
+
+.footer h3{
+font-size: 20px;
+font-weight: 600;
 }
