--- a/style.css
+++ b/style.css
@@ -213,7 +213,8 @@ background: rgba(255, 223, 0, 0.05);
     padding: 64px 48px;
     color: white;
     text-align: center;
-    background: rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
 }
 
 .support-section input[type="text"]{
