--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
     font-optical-sizing: auto;
     font-style: normal;
   }
-  /* universal style */
+
+  /* universal style--------------------------------------------------- */
+
   *{
     margin: 0;
     padding: 0;
@@ -15,7 +17,8 @@
     margin-bottom: 24px;
 }
 
-/* navigation section style */
+/* navigation section style--------------------------------------------- */
+
 .navigation{
     display: flex;
     align-items: center;
@@ -39,7 +42,8 @@
     opacity: 0.8;
 
 }
-/* banner section start */
+/* banner section style--------------------------------------------- */
+
 .banner-container{
     background-image: url(assets/Hero-bg.png);
     background-repeat: no-repeat;
@@ -61,14 +65,13 @@
     line-height: 68px;
     margin-top: 32px;
     margin-bottom: 24px;
-    
 }
 .banner-content p{
     color: rgb(13, 19, 33);
-font-size: 16px;
-font-weight: 400;
-line-height: 26px;
-margin-bottom: 32px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 32px;
 }
 .banner-content button{
     border-radius: 8px;
@@ -82,7 +85,7 @@ margin-bottom: 32px;
     text-decoration: none;
 }
 
-/* web-development-section start */
+/* web-development-section style-------------------------------------- */
 
 .web-development-section{
     width: 946px;
@@ -116,15 +119,16 @@ margin-bottom: 32px;
 }
 .web-development-box button{
     box-sizing: border-box;
-border: 1px solid rgb(13, 19, 33);
-opacity: 0.7;
-font-size: 20px;
-font-weight: 600;
-line-height: 23px;
-padding: 12px 20px 12px 20px;
+    border: 1px solid rgb(13, 19, 33);
+    opacity: 0.7;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 23px;
+    padding: 12px 20px 12px 20px;
 }
 
-/* my inspiration section style start */
+/* my inspiration section style--------------------------------------- */
+
 .my-inspiration-section{
     width: 1140px;
     height: 777px;
@@ -142,7 +146,7 @@ padding: 12px 20px 12px 20px;
     margin-bottom: 120px;
 }
 
-/* target section */
+/* target section style----------------------------------------------- */
 
 .target-section{
     width: 1140px;
@@ -160,28 +164,26 @@ padding: 12px 20px 12px 20px;
     justify-content: space-evenly;
     align-items: center;
     margin-top: 48px;
-
 }
 
 .target{
     width: 284px;
     height: 220px;
     padding: 40px;
-    
 }
 
 .target-box .one {
     border-radius: 16px;
-background: rgba(255, 76, 30, 0.05);
+    background: rgba(255, 76, 30, 0.05);
 
 }
 .target-box .two{
     border-radius: 16px;
-background: rgba(0, 76, 232, 0.05);
+    background: rgba(0, 76, 232, 0.05);
 }
 .target-box .three{
     border-radius: 16px;
-background: rgba(255, 223, 0, 0.05);
+    background: rgba(255, 223, 0, 0.05);
 }
 .target h3{
     margin-bottom: 8px;
@@ -196,7 +198,9 @@ background: rgba(255, 223, 0, 0.05);
     color: black;
     font-size: 16px;
 }
-/* next target */
+
+/* next target style--------------------------------------------------- */
+
 .next-target-section h1{
     text-align: center;
     margin-top: 100px;
@@ -204,7 +208,7 @@ background: rgba(255, 223, 0, 0.05);
 .next-target-section>p{
     text-align: center;
     margin-top: 10px;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
 }
 
 .next-target-box{
@@ -213,23 +217,27 @@ background: rgba(255, 223, 0, 0.05);
     gap: 50px;
     margin-top: 58px;
     padding: 40px;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
 }
 .target-item a{
     text-decoration: none;
     font-size: 16px;
-font-weight: 700;
-color: black;
+    font-weight: 700;
+    color: black;
 }
  .target-item p{
     margin-bottom: 20px;
 }
 .target-item h3{
     font-size: 24px;
-font-weight: 800;
-line-height: 36px;
+    font-weight: 800;
+    line-height: 36px;
 }
 
-/* support section start */
+/* support section style------------------------------------------- */
 
 .support-section{
     height:186px ;
@@ -249,23 +257,24 @@ line-height: 36px;
 
 .support-section input[type="text"]{
     box-sizing: border-box;
-border: 1px solid rgba(13, 19, 33, 0.15);
-border-radius: 8px;
-background: rgb(255, 255, 255);
-padding: 19px 20px 19px 20px;
-width: 548px;
-height: 57px;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    padding: 19px 20px 19px 20px;
+    width: 548px;
+    height: 57px;
 }
 .support-section input[type="submit"]{
     width: 120px;
     height: 58px;
     border-radius: 8px;
-background: rgb(255, 255, 255);
-padding: 17px 20px 17px 20px;
-margin-top: 70px;
+    background: rgb(255, 255, 255);
+    padding: 17px 20px 17px 20px;
+    margin-top: 70px;
 }
 
-/* footer section */
+/* footer section style------------------------------------------ */
+
 .footer{
     display: flex;
     align-items: center;
@@ -281,6 +290,6 @@ margin-top: 70px;
 }
 
 .footer h3{
-font-size: 20px;
-font-weight: 600;
+    font-size: 20px;
+    font-weight: 600;
 }
