--- a/style.css
+++ b/style.css
@@ -89,11 +89,12 @@
 
 .web-development-section{
     width: 946px;
-    height: 1235px;
     padding: 80px 97px;
     text-align: center;
     margin: 0 auto;
     margin-top: 74px;
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.02);
 }
 .web-development-box{
     padding-top: 48px;
@@ -101,6 +102,7 @@
     align-items: center;
     justify-content: space-evenly;
     margin-top: 96px;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
 }
 
 .web-development-content{
