--- a/style.css
+++ b/style.css
@@ -273,6 +273,8 @@
     padding: 19px 20px 19px 20px;
     width: 548px;
     height: 57px;
+    font-size: 20px;
+    font-weight: 600;
 }
 .support-section input[type="submit"]{
     width: 120px;
@@ -281,6 +283,8 @@
     background: rgb(255, 255, 255);
     padding: 17px 20px 17px 20px;
     margin-top: 70px;
+    font-size: 20px;
+    font-weight: 700;
 }
 
 /* footer section style------------------------------------------ */
